--- a/calc.html
+++ b/calc.html
@@ -478,7 +478,7 @@
 		$("txtCardHp").value=1067;
 		break;
 	}
-	calTreasureSpecialRemainHpAttackRate();
+	adjustOc();
     }
 
     /***********************************************************/
